# multiagent02

./: .gitignore  CLAUDE.md  ExampleWorkflow.py  README.md  REVIEW_WIP.md  delta.py  github_issues.py  main.py  prompt_loader.py  pyproject.toml  test_glm.py  utils.py
agents/: ResilientClaudeAgent.py  agent_config.py  base.py  claude_code_agent.py  debugger_agent.py  doc_research_agent.py  docker_run_agent.py  glm_agent.py
glmpython/: README.md  main.py  pyproject.toml
prompts/: architect.txt  coder.txt  compile_fixer.txt  debugger.txt  doc_research.txt  fixer.txt  reviewer.txt
