[project]
name = "glmpython"
version = "0.1.0"
description = "Call z.ai GLM-5.1 model via Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "zai-sdk>=0.2.2",
    "anthropic>=0.100.0",
]
